Fixes mobile icon alignment and changes mobile menu button to black

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,7 +23,11 @@ $brand_blue: #419bd7;
       position: relative;
     }
   }
-
+  .menu-icon.dark:after,
+  .menu-icon.dark:hover::after {
+    background: #000;
+    box-shadow: 0 7px 0 #000, 0 14px 0 #000;
+  }
 }
 
 .subnavigation ul li{
@@ -116,8 +120,7 @@ $brand_blue: #419bd7;
   }
 }
 
-main .highlight {
-  background-color: white;
+body.home-page main {
   h2 {
     white-space: nowrap;
   }
